# beacon

./: .gitattributes  .gitignore  CLAUDE.md  README.md  __init__.py  cli.py  lang_map.py  mcp.py  pyproject.toml  requirements.txt  schema.py
.github/workflows/: python-package.yml
beacon/: __init__.py  benchmark.py  cli.py  config.py  lang_map.py  mcp.py  schema.py
beacon/indexer/: embedder.py  indexer.py  scanner.py  symbols.py
beacon/search/: capsule.py  graph.py  query.py
indexer/: coupling.py  embedder.py  indexer.py  scanner.py  symbols.py
scripts/: generate-screenshots.sh
search/: capsule.py  graph.py  query.py
tests/: conftest.py  test_capsule.py  test_config.py  test_core.py  test_integration.py  test_model_download.py  test_query.py  test_scanner.py  test_schema.py  test_symbols.py
