[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-code"
version = "1.0.0"
description = "Beacon — semantic code intelligence engine for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["code-intelligence", "mcp", "ai", "embeddings", "tree-sitter", "semantic-search"]

dependencies = [
    "blake3",
    "gitpython",
    "numpy>=2.0",
    "rich>=13.0",
    "scikit-learn>=1.3",
    # ML stack — keep sentence-transformers, transformers, tokenizers, safetensors,
    # and torch in lock-step.  sentence-transformers 5.x requires transformers 5.x
    # which requires tokenizers 0.21+.  Older combos cause ImportErrors.
    "sentence-transformers>=5.0",
    "transformers>=5.0",
    "tokenizers>=0.21",
    "safetensors>=0.4",
    "tree-sitter>=0.25",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-bash",
    "tree-sitter-lua",
    "tree-sitter-swift",
    "tree-sitter-markdown",
]

[project.scripts]
beacon = "beacon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["beacon*"]

[tool.setuptools.package-data]
beacon = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that download or load large ML models (skip with -m 'not slow')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
